samples/ut/overloading/unsigned/DWordFail01.err
DWordFail01.z2(5, 9): error: class 'org.z2legacy.samples.ut.overloading.DWordFail01' does not have an overload
	test(sys.core.numeric.DWord)
existing overloads
	test(sys.core.numeric.Byte)
	test(sys.core.numeric.Word)
	test(sys.core.numeric.Small)
	test(sys.core.numeric.Short)
	test(sys.core.numeric.Int)
	test(sys.core.numeric.Float)
	test(sys.core.numeric.Char)
	test(sys.core.numeric.PtrSize)
