samples/ut/overloading/unsigned/DWordFail01.z2
namespace org.z2legacy.samples.ut.overloading;

class DWordFail01 {
	def @main() {
		test(DWord.Min);
	}
	
	def test(b: Byte) {
		System.Out << b.class;
	}
	
	def test(b: Word) {
		System.Out << b.class;
	}
	
	def test(b: Small) {
		System.Out << b.class;
	}
	
	def test(b: Short) {
		System.Out << b.class;
	}
	
	def test(b: Int) {
		System.Out << b.class;
	}

	def test(b: Float) {
		System.Out << b.class;
	}
	
	def test(b: Char) {
		System.Out << b.class;
	}
	
	def test(b: PtrSize) {
		System.Out << b.class;
	}
}